--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -16,7 +16,7 @@
   font-size: 40px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  margin-bottom:10px;
+  margin-bottom:0px;
 }
 
 .banner p {
@@ -56,7 +56,7 @@
 
 .content {
   position: absolute;
-  // top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 160px;
