--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -10,15 +10,6 @@
   // background-attachment: fixed;
 }
 
-
-// .banner-content h1 {
-//   font-family: 'Bungee Shade', cursive;
-//   font-size: 40px;
-//   font-weight: bold;
-//   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-//   margin-bottom:0px;
-// }
-
 .banner p {
   font-size: 20px;
   font-weight: lighter;
@@ -52,8 +43,6 @@
 
 .brand-banner h1 {
   position: relative;
-  // left: 50%;
-  // top: 50%;
   font-family: 'Bungee Shade', cursive;
   font-size: 40px;
   font-weight: bold;
@@ -61,12 +50,16 @@
   margin-bottom:0px;
 }
 
+.brand-banner {
+  margin-bottom: 40px;
+}
+
 
 // CSS animation for tagline V2
 
 .content {
   position: absolute;
-  top: 35%;
+  position: center;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 160px;
