--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,17 @@
+.footer-links {
+  font-family: 'Montserrat_light', sans-serif;
+  font-size: 10px;
+  color: white;
+}
 #home-footer {
   background: #373942;
   padding: 40px;
 }
 
 #home-footer a {
-  font-size: 25px;
+  font-size: 15px;
   color: white;
-  padding: 10px;
+  padding: 5px;
 }
 
 #home-footer a:hover {
@@ -16,3 +21,6 @@
 .footer-logo img{
   height: 100px;
 }
+
+
+
