--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,16 +1,22 @@
 <div id="home-footer">
   <div class="container">
     <div class="raw">
-    <div class="col-xs-12 col-sm-6 col-lg-4">
+      <div class="col-xs-12 col-sm-6 col-lg-6">
         <ul  class="list-inline">
           <li><%= link_to root_path, class: "footer-logo hidden-xs" do %>
             <%= image_tag "TREJhome.png" %>
-            <% end %></li>
-            <li><a target="_blank" href="https://www.linkedin.com/in/gautierweigert/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-            <li><a href=""><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-            <li><a href=""><i class="fa fa-users" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>
+            <% end %>
+          </li>
+          <li><a target="_blank" href="https://www.linkedin.com/in/gautierweigert/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          </li>
+          <li><%= link_to "Contacts", pages_contact_path, class: "footer-links" %>
+          </li>
+          <li><%= link_to "Concept", pages_concept_path, class: "footer-links" %>
+          </li>
+          <li><%= link_to "Tarifs", pages_tarifs_path, class: "footer-links" %>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
+</div>
