--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <!-- Links when logged in -->
     <%= link_to "MES DEMANDES", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
     <%#= link_to "PROFIL", edit_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "CONTACTEZ-NOUS 06 17 98 75 96", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "CONTACTEZ-NOUS 06 17 98 75 96", pages_contact_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Avatar with dropdown menu -->
     <div class="navbar-wagon-item">
